--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -4,7 +4,8 @@
     #resets
 \*------------------------------*/
 
-// general resets
+/*|| general styles */
+
 html {
   box-sizing: border-box;
 }
@@ -20,7 +21,55 @@ html {
 body {
   min-height: 100vh;
   overflow-x: hidden;
-  font-family: varaiables.$Font-Primary;
 }
 
-// restting the default style of liks
+/*|| resetting the default styles for link states*/
+a,
+a:visited,
+a:focus,
+a:active {
+  text-decoration: none;
+}
+
+button {
+  border: none;
+}
+
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+/*|| reset the default styles on focus state but not when tabbed */
+button,
+a {
+  cursor: pointer;
+  &:focus {
+    outline: max(1, 0.1em) solid;
+    outline-offset: -0.25em;
+  }
+
+  &:not(:focus-visible) {
+    outline: none;
+  }
+
+  &:focus-visible {
+    outline: max(1, 0.1em) solid;
+    outline-offset: -0.25em;
+  }
+}
+
+/*|| Remove all animations and transitions
+for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
