--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -6,7 +6,7 @@
 
 // setting cutom media queries
 @mixin respond-to($breakpoint) {
-  @media screen and (min-width: map-get($key:$breakpoint,$source:variables.$Breakpoint)) {
+  @media screen and (min-width: map-get($map:variables.$Breakpoint,$key:$breakpoint)) {
     @content;
   }
 }
